<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>xyz.erupt</groupId>
    <artifactId>erupt</artifactId>
    <version>1.13.1-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>erupt</name>
    <description>erupt common data framework pom parent</description>
    <url>https://www.erupt.xyz</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <erupt.groupId>xyz.erupt</erupt.groupId>
        <java.version>17</java.version>
        <spring.boot.version>3.5.6</spring.boot.version>
    </properties>

    <!--
    在编译spring boot 等多模块项目的时候，往往出现
    Non-resolvable parent POM: Could not find artifact
    后面跟一串其它信息，网上大部分解决方案是修改relativePath配置项，
    其实这是很不优雅的方式。这里介绍另一种解决方案。
    解决办法如下，把父项目的modules里面的配置全部注释或者删除，
    然后编译并打包并安装，在提示成功后，再把原来注释和删除的配置项还原即可，然后再编译即可成功。
    -->
    <modules>
        <module>erupt-annotation</module>
        <module>erupt-core</module>
        <module>erupt-excel</module>
        <module>erupt-toolkit</module>
        <module>erupt-ai</module>

        <module>erupt-data/erupt-jpa</module><!-- JPA 数据实现 -->
        <module>erupt-data/erupt-mongodb</module><!-- MongoDB 数据实现 -->

        <module>erupt-upms</module><!--用户权限管理-->
        <module>erupt-security</module><!--API 接口安全-->
        <module>erupt-admin</module>
        <module>erupt-websocket</module><!--websocket-->
        <module>erupt-web</module><!--前端代码-->

        <module>erupt-tpl</module>
        <module>erupt-tpl-ui/ant-design</module>
        <module>erupt-tpl-ui/element-ui</module>
        <module>erupt-tpl-ui/amis</module>
        <module>erupt-tpl-ui/element-plus</module>

        <module>erupt-extra/erupt-job</module><!--任务调度-->
        <module>erupt-extra/erupt-generator</module><!--代码生成-->
        <module>erupt-extra/erupt-monitor</module><!--服务监控-->
        <module>erupt-extra/erupt-magic-api</module><!-- magic-api 接口配置 -->
        <!-- erupt cloud -->
        <module>erupt-cloud/erupt-cloud-common</module>
        <module>erupt-cloud/erupt-cloud-server</module> <!-- 主服务节点 -->
        <module>erupt-cloud/erupt-cloud-node</module> <!-- 云node节点 -->
        <module>erupt-cloud/erupt-cloud-node-jpa</module>  <!-- 云node节点（聚合jpa） -->

        <!--使用H2作为数据源的示例项目-->
        <module>erupt-sample</module>

        <!--erupt deploy-->
        <module>deploy/erupt-cloud-server-docker</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.19.0</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>automizely-nexus-snapshots</id>
            <name>automizely-nexus-snapshots</name>
            <url>https://nexus.automizely.org/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>utf-8</encoding>
                    <verbose>true</verbose>
                    <fork>true</fork>
                    <compilerArgs>
                        <compilerArg>-parameters</compilerArg>
                    </compilerArgs>
                    <!--<executable>/Library/Java/JavaVirtualMachines/jdk1.8.0_231.jdk/Contents/Home/bin/javac</executable>-->
                </configuration>
            </plugin>
            <!-- 一键更新子模块版本号 plugins -> versions -> version:set  -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>1.8.1</version>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <tag>master</tag>
        <url>git@github.com:erupts/erupt.git</url>
        <connection>scm:git:git@github.com:erupts/erupt.git</connection>
        <developerConnection>scm:git:git@github.com:erupts/erupt.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>YuePeng</name>
            <email>erupts@126.com</email>
            <roles>
                <role>owner</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <profiles>
        <profile>
            <id>disable-javadoc-doclint</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <javadoc.opts>-Xdoclint:none</javadoc.opts>
                <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <dependencies>
                <dependency>
                    <groupId>javax.interceptor</groupId>
                    <artifactId>javax.interceptor-api</artifactId>
                    <version>1.2</version>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Javadoc -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <!-- 1. 关闭 doclint -->
                            <doclint>none</doclint>
                            <!-- 2. 指定 javadoc 可执行文件（按实际路径改） -->
                            <javadocExecutable>
                                ${java.home}/bin/javadoc
                            </javadocExecutable>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
